--- a/setup.ini
+++ b/setup.ini
@@ -14,13 +14,15 @@ TicketServerIP=127.0.0.1
 TicketServerPort=7777
 BillingGatewayIP=127.0.0.1
 BillingGatewayPort=5560
-PingAlive=0
-FBMsgUpdate=0
-CrossWorldID=1010
-TerritoryWorldID=1010
-ColosseumWorldID=1010
-GreedyIslandWorldID=1010
-BattleRoyaleWorldID=1010
+PingAlive=1
+FBMsgUpdate=1
+Battlefield=1
+FamilyBattle=1
+CrossWorldID=1090
+TerritoryWorldID=1090
+ColosseumWorldID=1090
+GreedyIslandWorldID=1090
+BattleRoyaleWorldID=1090
 MaintenanceDate=-1
 RankAward=1
 NAT=0
@@ -30,9 +32,9 @@ MemoryCheckTime=120
 MemoryCheckSavingTime=300
 MaxCharacterNumber=9
 LuckyStarOpen=1
-IsleWorldID=1010
+IsleWorldID=1090
 BotServer=1
-XTrap=0
+XTrap=1
 
 [MissionServer]
 ReserveDeletedCharDays=30
@@ -41,16 +43,16 @@ MissionServerLogLevel=3
 MissionServerAssert=0
 GoldRange=10000.50000.100000.200000.500000.1000000.2000000.3000000.10000000.100000000
 RecordGoldvalue=1000000
-PlayerRoomWorldID=1010
+PlayerRoomWorldID=1090
 CheckPetToEgg=1
 
 [WorldServer]
 LoadServerStatus=1
 WorldServerLogLevel=3
 WorldServerAssert=0
-FarmWorldID=0
-PlayerRoomWorldID=1010
+FarmWorldID=1090
+PlayerRoomWorldID=1090
 
 [ZoneServer]
 HeartBeat=1
-PlayerRoomWorldID=1010
+PlayerRoomWorldID=1090
